[package]
name = "neotrellis"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
num_enum = { version = "0.5.1", default-features = false }